# raise-issue-use-picture

./: .gitignore  README.md  REVIEW-DESIGN-P0.md  skills-lock.json
.omo/: boulder.json
.omo/evidence/: task-1-deps.txt  task-1-install.txt  task-2-types.txt  task-3-config-default.txt  task-3-config-load.txt  task-4-browser-found.txt  task-4-env-override.txt  (+2 more)
resource/agent/m365-copilot-openai-proxy/: README.md  TOKEN_REFRESH.md  pyproject.toml
resource/agent/m365-copilot-openai-proxy/src/m365_copilot_openai_proxy/: __init__.py  app.py  cli.py  config.py  models.py  session_store.py  substrate_client.py  translator.py
resource/agent/m365-copilot-openai-proxy/tests/: test_app.py
resource/agent/teams-copilot-proxy/: CONTEXT.md  README.md  TOKEN_REFRESH.md  pyproject.toml
resource/agent/teams-copilot-proxy/docs/: SPEC-opencode-integration.md  opencode-integration.md
resource/agent/teams-copilot-proxy/docs/adr/: 0001-prompt-emulated-tool-calling.md  0002-opencode-over-m365-copilot.md
resource/agent/teams-copilot-proxy/docs/specs/: 0001-teams-copilot-proxy-greenfield.md
resource/agent/teams-copilot-proxy/docs/tickets/: 01-correction-retry-failure-sentinel.md  02-turn-aware-truncation.md  03-outbound-redaction.md  04-opencode-scaffold-docs.md  05-persist-session-key-collision.md
resource/agent/teams-copilot-proxy/examples/: opencode.json
resource/agent/teams-copilot-proxy/src/teams_copilot_proxy/: app.py  cli.py  config.py  guards.py  models.py  probe.py  redaction.py  substrate_client.py  token_store.py  tool_protocol.py  translator.py
resource/agent/teams-copilot-proxy/tests/: test_app.py
(+161 files in other folders)
